--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   "homepage": "https://github.com/xiewang/react-native-emoticons",
   "dependencies": {
     "emoji-datasource": "^2.4.4",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.21",
     "prop-types": "^15.5.10",
+    "@react-native-async-storage/async-storage": "^1.15.0",
     "react-native-fetch-blob": "^0.10.5",
-    "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-scrollable-tab-view": "git+https://github.com/happypancake/react-native-scrollable-tab-view.git",
     "string.fromcodepoint": "^0.2.1"
   }
 }
